--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ ARFIMA = "9d0fb3db-ba49-4108-bc86-650b3813b6d5"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
