--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 ARFIMA = "9d0fb3db-ba49-4108-bc86-650b3813b6d5"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 Gadfly = "c91e804a-d5a3-530f-b6f0-dfbca275c004"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
@@ -11,6 +12,7 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Pandas = "eadc2687-ae89-51f9-a5d9-86b5a6373a9c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 SymPy = "24249f21-da20-56a4-8eb1-6a02cf4ae2e6"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
